DCS-1646 code review changes